# LuminLogger

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.bat  build.sh  conanfile.py  package.bat  package.sh  vcpkg.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake.yml  code-quality.yml  release.yml
cmake/: fetch_lumin_logger.cmake  lumin-logger-config.cmake.in
docs/: advanced_usage.md  api_reference.md  getting_started.md
examples/: CMakeLists.txt  basic_example.cpp
include/lumin_logger/: logger.h
include/lumin_logger/sinks/: imgui_sink.h  memory_sink.h  sinks.h  stats_sink.h
scripts/: generate_docs.bat  generate_docs.sh  install.bat  install.sh
src/: logger.cpp
tests/: CMakeLists.txt  filtering_test.cpp  logger_test.cpp  memory_sink_test.cpp  stats_sink_test.cpp
